TGA-Reader: Bail out of check if the device is not seekable.

Suppress warning
'QIODevice::seek: Cannot call seek on a sequential device'
which is emitted further down when attempting to restore
the position of the file.

Task-number: QTBUG-31081
Change-Id: Ib6a4b3eecaa61905a29020e5dd428f1516bfba7f